# lab3_phelan_thomas

./: README.md  threads.c
include/: threadfunc.h
src/: CMakeLists.txt  threadfunc.c  threads.c
test/: CMakeLists.txt  test.c
